[package]
name = "cargo-toml-parser"
version = "0.2.0"
edition = "2021"
description = "Small crate to parse a Cargo.toml file to read dependencies versions"
license = "MIT"
authors = ["Bertrand Darbon", "Bertrand Darbon <bertrand@hyle.eu>"]
repository = "https://github.com/Hyle-org/cargo-toml-parser"

[dependencies]
toml = "0.8.20"
serde = { version = "1.0.199", features = ["derive"] }
